[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-threat-intel"
version = "1.0.0"
description = "AI-powered threat intelligence summarizer: extracts TTPs, IOCs, and attribution from raw intel reports."
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ai-threat-intel = "ai_threat_intel.main:cli"

[tool.setuptools.packages.find]
include = ["ai_threat_intel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
